# finalreview

./: .gitignore  README.md  pyproject.toml
src/finalreview/: __init__.py  agent.py  cli.py  config.py  enrichers.py  exceptions.py  inventory.py  models.py  policy.py  prompts.py  reporting.py  runner.py  signal.py  utils.py
src/finalreview/providers/: __init__.py  anthropic.py  base.py  factory.py  google.py  mock.py  openai.py
tests/: test_agent.py  test_build.py  test_cli.py  test_config.py  test_inventory.py  test_policy.py  test_reporting.py
tests/fixtures/vulnerable_python/: app.py
