[build-system]
requires = ["hatchling>=1.26.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "finalreview"
dynamic = ["version"]
description = "CI-first agentic vulnerability scanner for source repositories."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Mahfuz Khan", email = "mahfuzkhanshovon@gmail.com" }
]
keywords = ["security"]
classifiers = [
]
dependencies = [
  "pathspec>=0.12.1",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "rich>=13.9.2",
  "tomli>=2.0.1; python_version < '3.11'",
  "typer>=0.12.5",
]

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
anthropic = ["anthropic>=0.34.0"]
google = ["google-genai>=0.3.0"]
all = [
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "google-genai>=0.3.0",
]
dev = [
  "build>=1.2.2",
  "hatch-vcs>=0.4.0",
  "hatchling>=1.26.0",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.8",
  "twine>=5.1.1",
]

[project.scripts]
finalreview = "finalreview.cli:app"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/finalreview/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/finalreview"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/examples",
  "/.github",
]

[tool.finalreview]
provider = "none"
fail-on = "high"
min-confidence = "medium"
scope = "full"
artifacts-dir = "finalreview-artifacts"
cache-dir = ".finalreview-cache"
max-llm-calls = 12
concurrency = 4
timeout-seconds = 120
offline-enricher = "auto"
whole-file-upload = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["finalreview"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "RUF",
]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"src/finalreview/_version.py" = ["ALL"]

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
namespace_packages = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["pathspec", "tomli"]
ignore_missing_imports = true
